@@ -432,7 +432,7 @@ gimp_undo_create_preview (GimpUndo    *undo,
         idle->context = g_object_ref (context);
 
       undo->preview_idle_id =
-        g_idle_add_full (G_PRIORITY_DEFAULT_IDLE,
+        g_idle_add_full (GIMP_VIEWABLE_PRIORITY_IDLE,
                          gimp_undo_create_preview_idle, idle,
                          (GDestroyNotify) gimp_undo_idle_free);
     }
